tests/baselines/reference/trivialSubtypeReductionNoStructuralCheck(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
trivialSubtypeReductionNoStructuralCheck.ts(3,7): error TS7023: 'steps' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== trivialSubtypeReductionNoStructuralCheck.ts (1 errors) ====
    declare const props: WizardStepProps;
    export class Wizard {
      get steps() {
          ~~~~~
!!! error TS7023: 'steps' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
        return {
          wizard: this,
          ...props,
        } as WizardStepProps;
      }
    }
    
    export interface WizardStepProps {
      wizard?: Wizard;
    }